tests/paczka1/small_fuzzy/41013342.err
Error in line 2: QXSHmPoMlDn A57 32,3
Error in line 4: CgSnrEjtNp A706 84,9
